# simple-discord-bot

./: Dockerfile  docker-compose.yml  pyproject.toml
cs2_battle_bot/: manage.py
cs2_battle_bot/accounts/: models.py
cs2_battle_bot/accounts/migrations/: 0001_initial.py  0002_alter_account_groups_delete_group.py
cs2_battle_bot/bot/: client.py
cs2_battle_bot/bot/management/commands/: run_bot.py
cs2_battle_bot/cs2_battle_bot/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: upgrade.sh
